@@ -1,48 +1,0 @@
-<?php
-namespace Tpwd\KeSearch\Scheduler;
-
-use TYPO3\CMS\Core\Configuration\ExtensionConfiguration;
-use TYPO3\CMS\Core\Utility\GeneralUtility;
-
-/***************************************************************
- *  Copyright notice
- *  (c) 2011 Andreas Kiefer
- *  All rights reserved
- *  This script is part of the TYPO3 project. The TYPO3 project is
- *  free software; you can redistribute it and/or modify
- *  it under the terms of the GNU General Public License as published by
- *  the Free Software Foundation; either version 2 of the License, or
- *  (at your option) any later version.
- *  The GNU General Public License can be found at
- *  http://www.gnu.org/copyleft/gpl.html.
- *  This script is distributed in the hope that it will be useful,
- *  but WITHOUT ANY WARRANTY; without even the implied warranty of
- *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- *  GNU General Public License for more details.
- *  This copyright notice MUST APPEAR in all copies of the script!
- ***************************************************************/
-
-
-/**
- * Class IndexerTask
- * @deprecated Use console command instead (Tpwd\KeSearch\Command\StartIndexerCommand)
- * @package Tpwd\KeSearch\Scheduler
- */
-class IndexerTask extends \TYPO3\CMS\Scheduler\Task\AbstractTask
-{
-
-    public function execute()
-    {
-
-        // get extension configuration
-        $this->extConf = GeneralUtility::makeInstance(ExtensionConfiguration::class)->get('ke_search');
-
-        // make indexer instance
-        $indexer = GeneralUtility::makeInstance(\Tpwd\KeSearch\Indexer\IndexerRunner::class);
-
-        // process
-        $indexer->startIndexing(true, $this->extConf, 'CLI');
-
-        return true;
-    }
-}
