@@ -23,14 +23,6 @@ defined('TYPO3') or die();
         ]
     );
 
-    // add scheduler task
-    $GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['scheduler']['tasks'][\Tpwd\KeSearch\Scheduler\IndexerTask::class]
-        = array(
-        'extension' => 'ke_search',
-        'title' => 'Indexing process for ke_search (DEPRECATED, please use "Execute console commands" --> "ke_search:indexing" instead)',
-        'description' => 'This task updates the ke_search index (DEPRECATED, please use "Execute console commands" --> "ke_search:indexing" instead)'
-    );
-
     if ((new \TYPO3\CMS\Core\Information\Typo3Version())->getMajorVersion() === 10) {
         // This icon registration can be deleted once compatibility with TYPO3 v10 is removed
         // see also: Configuration/Icons.php for the new way
